2005-09-01  Dmitry Diky  <diwil@spec.ru>

	* config/tc-msp430.c (msp430_operands): Emit dwarf2_emit_insn()
	as appropriate. Change frag_variant() to frag_var() for relaxes. 

2005-08-29  Nick Clifton  <nickc@redhat.com>

	* write.c (generic_force_reloc): Do not call S_FORCE_RELOC if
	there is no symbol.

2005-08-26  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (intel_e09): Set JumpAbsolute when seeing a PTR-
	qualified operand of a branch.
	(intel_bracket_expr): Set JumpAbsolute here...
	(intel_e11): ... rather than here.

2005-08-26  Christian Groessler  <chris@groessler.org>

	* configure.tgt: Set bfd_gas also for z8k cpu.
	* config/tc-z8k.c (s_segm): Use bfd_set_arch_mach to set machine
	type.
	(newfix): Adapt to bfd reloc types.
	(build_bytes): Adapt to bfd reloc types.  Ensure that enough space
	is available in the current frag.
	(md_convert_frag): Adapt function parameters.
	(tc_gen_reloc): New function.
	(md_section_align): Use bfd_get_section_alignment.
	(md_apply_fix): Adapt to bfd reloc types.  Fix handling of
	BFD_RELOC_Z8K_IMM4L, BFD_RELOC_8, BFD_RELOC_16, and BFD_RELOC_32
	relocations.
	* config/tc-z8k.h (TARGET_ARCH): Define.
	(tc_fix_adjustable): Define.

2005-08-25  Chao-ying Fu  <fu@mips.com>

	* config/tc-mips.c (mips_set_options): Add ase_dsp for DSP instructions.
	(mips_opts): Add -1 to initialize ase_dsp.
	(file_ase_dsp): New variable for -mdsp.
	(CPU_HAS_DSP): New define.
	(validate_mips_insn): Add supports for 3, 4, 5, 6, 7, 8, 9, 0, ', :, @
	operand formats.
	(mips_ip): Add min_range and max_range for checking singed numbers.
	Check ase_dsp to enable DSP instructions.
	Handle 3, 4, 5, 6, 7, 8, 9, 0, ', :, @ operand formats.
	(OPTION_DSP, OPTION_NO_DSP): New define.
	(OPTION_COMPAT_ARCH_BASE): Change because of inserting DSP define.
	(md_parse_option): Parse OPTION_DSP and OPTION_NO_DSP.
	(mips_after_parse_args): Set ase_dsp based on CPU.
	(s_mipsset): Handle ".set dsp" and ".set nodsp".